k8s-manifest/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: python-app-route
  namespace: traefik
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - "python-app.test.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: python-app-service
      port: 8080





# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: python-app
#   namespace: traefik # 👈 Deployed here so Traefik can instantly see it
# spec:
#   parentRefs:
#     - group: gateway.networking.k8s.io
#       kind: Gateway
#       name: traefik-gateway
#       namespace: traefik
#   hostnames:
#     - python-app.test.com
#   rules:
#     - matches:
#         - path:
#             type: PathPrefix
#             value: /
#       backendRefs:
#         - group: ""
#           kind: Service
#           name: python-app
#           namespace: default # 👈 Explicitly forwards traffic back to your app's namespace
#           port: 8080





# # Please edit the object below. Lines beginning with a '#' will be ignored,
# # and an empty file will abort the edit. If an error occurs while saving this file will be
# # reopened with the relevant failures.
# #
# apiVersion: gateway.networking.k8s.io/v1
# kind: Gateway
# metadata:
#   annotations:
#     meta.helm.sh/release-name: traefik
#     meta.helm.sh/release-namespace: traefik
#   creationTimestamp: "2026-06-29T07:49:18Z"
#   generation: 1
#   labels:
#     app.kubernetes.io/instance: traefik-traefik
#     app.kubernetes.io/managed-by: Helm
#     app.kubernetes.io/name: traefik
#     helm.sh/chart: traefik-41.0.0
#   name: traefik-gateway
#   namespace: traefik
#   resourceVersion: "41707"
#   uid: 9816fae9-2bbb-4704-9ef6-b249867daeeb
# spec:
#   gatewayClassName: traefik
#   listeners:
#   - allowedRoutes:
#       namespaces:
#         from: All
#     name: web
#     port: 8000
#     protocol: HTTP
# status:
#   conditions:
#   - lastTransitionTime: "2026-06-29T07:49:19Z"
#     message: Gateway successfully scheduled
#     observedGeneration: 1
#     reason: Accepted
#     status: "True"
#     type: Accepted
#   - lastTransitionTime: "2026-06-29T07:49:19Z"
#     message: Gateway successfully scheduled
#     observedGeneration: 1
#     reason: Programmed
#     status: "True"
#     type: Programmed
#   listeners:
#   - attachedRoutes: 0
#     conditions:
#     - lastTransitionTime: "2026-06-29T07:49:19Z"
#       message: No error found
#       observedGeneration: 1
#       reason: Accepted
#       status: "True"
#       type: Accepted
#     - lastTransitionTime: "2026-06-29T07:49:19Z"
#       message: No error found
#       observedGeneration: 1
#       reason: ResolvedRefs
#       status: "True"
#       type: ResolvedRefs
#     - lastTransitionTime: "2026-06-29T07:49:19Z"
#       message: No error found
#       observedGeneration: 1
#       reason: Programmed
#       status: "True"
#       type: Programmed
#     name: web
#     supportedKinds:
#     - group: gateway.networking.k8s.io
#       kind: HTTPRoute
#     - group: gateway.networking.k8s.io
#       kind: GRPCRoute
