k8s-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
  namespace: default
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000

# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
# apiVersion: v1
# kind: Service
# metadata:
#   creationTimestamp: "2026-06-26T15:23:51Z"
#   name: python-app-service
#   namespace: default
#   resourceVersion: "3608"
#   uid: 1625dd5f-eb01-4dd9-b699-592878ef5104
# spec:
#   clusterIP: 10.96.182.80
#   clusterIPs:
#   - 10.96.182.80
#   internalTrafficPolicy: Cluster
#   ipFamilies:
#   - IPv4
#   ipFamilyPolicy: SingleStack
#   ports:
#   - port: 8080
#     protocol: TCP
#     targetPort: 5000
#   selector:
#     app: python-app
#   sessionAffinity: None
#   type: ClusterIP
# status:
#   loadBalancer: {}
